Create multiple users
